add menegment pr 1

--- a/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/практическая работа 4/Безымянный.html
+++ b/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/практическая работа 4/Безымянный.html
@@ -158,7 +158,7 @@
     изменения, в связи с переосмыслением проекта на других стадиях.</p>
 <p></p>
 <hr>
-<em><h1 style="font-size: 14px "><strong>3 Хостинг</strong> <strong>Web-узла. Программное <br>обеспечение рабочего места
+<em><h1 align="center " style="font-size: 14px "><strong>3 Хостинг</strong> <strong>Web-узла. Программное <br>обеспечение рабочего места
     web-разработчика</strong></h1></em>
 <p>WEB-хостинг – это услуга предоставления пространства на дисковых носителях сервера для размещения, хранения и
     поддержки веб-сайта клиента. Чтобы понять, для чего нужен хостинг, представьте, что Вы создали сайт. Пока он
