--- a/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/Практическая работа 5/List.htm
+++ b/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/Практическая работа 5/List.htm
@@ -1,65 +1,65 @@
 <HTML>
 <HEAD>
-<TITLE> Примеры списков </title></head>
+<TITLE> пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ </title></head>
 <BODY>
-<CENTER><H1>Списки</h1></center>
+<CENTER><H1>пїЅпїЅпїЅпїЅпїЅпїЅ</h1></center>
 <HR>
-<H3>Ненумерованный список</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</h3>
 <UL>
-<LI>Пункт 1 списка 
-<LI>Пункт 2 списка 
-<LI>Пункт 3 списка 
+<LI>пїЅпїЅпїЅпїЅпїЅ 1 пїЅпїЅпїЅпїЅпїЅпїЅ 
+<LI>пїЅпїЅпїЅпїЅпїЅ 2 пїЅпїЅпїЅпїЅпїЅпїЅ 
+<LI>пїЅпїЅпїЅпїЅпїЅ 3 пїЅпїЅпїЅпїЅпїЅпїЅ 
 </ul>
 <HR>
-<H3>Вложенные списки</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</h3>
 <UL>
-<LI>Пункт 1 
+<LI>пїЅпїЅпїЅпїЅпїЅ 1 
 <OL>
-<LI>Пункт 1.1
-<LI>Пункт 1.2
+<LI>пїЅпїЅпїЅпїЅпїЅ 1.1
+<LI>пїЅпїЅпїЅпїЅпїЅ 1.2
 </ol> 
-<LI>Пункт 2
+<LI>пїЅпїЅпїЅпїЅпїЅ 2
 <OL>
-<LI>Пункт 2.1
-<LI>Пункт 2.2
+<LI>пїЅпїЅпїЅпїЅпїЅ 2.1
+<LI>пїЅпїЅпїЅпїЅпїЅ 2.2
 </ol>   
-<LI>Пункт 3  
+<LI>пїЅпїЅпїЅпїЅпїЅ 3  
 <OL>
-<LI>Пункт 3.1
-<LI>Пункт 3.2
+<LI>пїЅпїЅпїЅпїЅпїЅ 3.1
+<LI>пїЅпїЅпїЅпїЅпїЅ 3.2
 </ol> 
 </ul>
 <HR>
-<H3>Нумерованный список</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ</h3>
 <OL type="I">
-<LI>Пункт 1
-<LI>Пункт 2
-<LI>Пункт 3
-<LI>Пункт 4
+<LI>пїЅпїЅпїЅпїЅпїЅ 1
+<LI>пїЅпїЅпїЅпїЅпїЅ 2
+<LI>пїЅпїЅпїЅпїЅпїЅ 3
+<LI>пїЅпїЅпїЅпїЅпїЅ 4
 </ol>
 <HR>
-<H3>Список с определениями</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</h3>
 <DL>
-<DT>Пункт 1
-<DD>Определение пункта 1
-<DD>Другое определение пункта 1
-<DT>Пункт 2
-<DD>Определение пункта 2
-<DT>Пункт 3 
-<DD>Определение пункта 3
+<DT>пїЅпїЅпїЅпїЅпїЅ 1
+<DD>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ 1
+<DD>пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ 1
+<DT>пїЅпїЅпїЅпїЅпїЅ 2
+<DD>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ 2
+<DT>пїЅпїЅпїЅпїЅпїЅ 3 
+<DD>пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ 3
 </dl>
 <HR>
-<H3>Список типа DIR/LI</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ DIR/LI</h3>
 <DIR>
-<LI>Пункт 1
-<LI>Пункт 2
-<LI>Пункт 3
+<LI>пїЅпїЅпїЅпїЅпїЅ 1
+<LI>пїЅпїЅпїЅпїЅпїЅ 2
+<LI>пїЅпїЅпїЅпїЅпїЅ 3
 </dir>
 <HR>
-<H3>Список типа MENU/LI</h3>
+<h3>пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ MENU/LI</h3>
 <MENU>
-<LI>Пункт 1
-<LI>Пункт 2
-<LI>Пункт 3
+<LI>пїЅпїЅпїЅпїЅпїЅ 1
+<LI>пїЅпїЅпїЅпїЅпїЅ 2
+<LI>пїЅпїЅпїЅпїЅпїЅ 3
 </menu>
 </BODY></HTML>
