--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/index.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/index.html
@@ -14,6 +14,7 @@
         <a href=#about_law>0 законе</a>
     <LI><A href=#about_food>0 еде и питье</a>
     <LI><A href=#about_house>0 жилище</a>
+    <p><a href="index4.html">динозавр</a></p>
 </UL>
 <h3>
     <h3 id=about_love>0 любви</h3> Тогда, сказала Алмитра, расскажи нам о Любви. И он поднял голову и посмотрел на
