--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/index4.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/index4.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <HEAD>
-    <ТITLЕ>Динозавры - это Kруто</TITLE>
-        <Link rel="stylesheet" href="dinoz.ess" type="text/css">
-        </HEAD>
+    <title>Динозавры - это Kруто</title>
+    <Link rel="stylesheet" href="dinoz.ess" type="text/css">
+</HEAD>
 <BODY>
-<Н1>Страница, посвященная динозаврам</Н1>
-<P>
+<h1>Страница, посвященная динозаврам</h1>
+<p>
     Динозавры — это
-    </Р>
+</p>
 </BODY>
 </HTML>
