--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.2+2.3/index.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.2+2.3/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<p>
-<p>Привет, колледж <q> НТИ НИЯУ МИФИ</q> &copy;</p>
-<h1 align="center">Корпоративные информационные системы</h1>
-<h2 align="center">Корпоративные информационные системы</h2>
-<h3 align="center">Корпоративные информационные системы</h3>
-<h4 style="background: yellow" align="center">Корпоративные информационные системы</h4>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <title>Корпоративные информационные системы</title>
+</head>
+
+<body>
+<p>Привет, колледж НТИ НИЯУ МИФИ</p>
+<h1>Корпоративные информационные системы</h1>
+<h2>План:</h2>
+<ol>
+    <li><a href="#S001">Современные корпоративные информационные системы (КИС) играют в наше время очень важную роль в бизнесе.</a></li>
+    <li><a href="#S002">Управленческий учет и отчетность</a></li>
+    <li><a href="#S003">Автоматизированные информационные системы</a></li>
+</ol>
+<h2>
+    1. Современные корпоративные информационные системы (КИС) играют в наше время очень важную роль в бизнесе.
+    <a name="S001"></a>
+</h2>
+<p>КИС отражает концептуальную и физическую архитектуру организации и сопровождает ее многофункциональную деятельность. Основой КИС предприятий на современном этапе являются так называемые системы планирования ресурсов предприятий (Enterprise Recourse Planning — ERP). Мировой опыт свидетельствует, что умело выбранная и внедренная ERP-система существенно улучшает управляемость предприятием и повышает эффективность его работы.</p>
+<ul>
+    <li>система должна быть ориентирована на лиц, принимающих решения и на сотрудников аналитического отдела;</li>
+    <li>система должна строиться "сверху вниз", руководители каждого уровня должны проанализировать состав и периодичность необходимых им для выполнения своей работы данных;</li>
+    <li>исполнители должны иметь возможность фиксирования и передачи "наверх" установленных их руководством данных;</li>
+    <li>И другие</li>
+</ul>
+
+<h2>2. Управленческий учет и отчетность
+    <a name="S002"></a>
+</h2>
+<p>
+    <mark>Сущность данного подхода состоит в том, что</mark> при планировании и управлении предприятием помимо основных производственных и материальных ресурсов <mark>учитываются</mark> еще и дополнительные, потребляемые во время маркетинговой и
+    текущей работы с клиентом, послепродажного обслуживания товаров, перевалочных и обслуживающих операций, <mark>внутрицеховые
+    ресурсы.</mark>
+</p>
+<h2>
+    Автоматизированные информационные системы
+    <a name="S003"></a>
+</h2>
+<ul>
+    <li>автоматизацию многих направлений деятельности предприятия (бухгалтерский учет, управление персоналом, сбыт, снабжение и т. д.);</li>
+    <li>автоматизацию основных технологических процессов предприятия;</li>
+</ul>
+<p align="center">© <strong>Егорушкин Илья</strong></p>
 </body>
+
 </html>
