--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/Практика/menu.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.7/Практика/menu.html
@@ -8,11 +8,10 @@
 <body>
 <div class="cssSlider">
     <ol>
-        <li><p><a href="1/1.html" title="Мишки" target="_blank">1</a></p></li>
-        <li><p><a href="1/2/2.html" title="Мишки" target="_blank">2</a></p></li>
-        <li><p><a href="3.html" title="Мишки" target="_blank">3</a></p></li>
-        <li><p><a href="4.html" title="Мишки" target="_blank">4</a></p></li>
-        <li><p><a href="5.html" title="Мишки" target="_blank">5</a></p></li>
+        <li><p><a href="index.html" title="Краткая информация о медведях " target="_blank">Краткая информация о медведях </a></p></li>
+        <li><p><a href="1/1.html" title="Медведь – описание, ареал, питание, враги, размножение, виды, фото и видео - «Как и Почему»" target="_blank">Медведь – описание, ареал, питание, враги, размножение, виды, фото и видео - «Как и Почему»</a></p></li>
+        <li><p><a href="3.html" title="Мишки галерея" target="_blank">Мишки галерея</a></p></li>
+        <li><p><a href="4.html" title="Виды медведей с фото и названиями" target="_blank">Виды медведей с фото и названиями</a></p></li>
     </ol>
 </div>
 <li><p><a href="index.html">Домой</a></p></li>
