--- a/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/Практическая работа 5/index.html
+++ b/ПР/КПР-47Д  Web-технологии (МДК.05.02 )/Практическая работа 5/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
+</head >
+<body style="background-color: #7fffd4 ">
 
 <h1 style="background-color: #7fffd4 " align="center"><font size="5" color="red" face="JetBrainsMono-Bold">Моя
     страница-Web</font></h1>
