--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.8/html/10.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/2.8/html/10.html
@@ -24,16 +24,16 @@
     <TABLE cellpadding=5 bgcolor=darkgray width=600>
         <TR>
 
-            <TH><A href="parking[l] .mpg" ximg src="clipl.gif" width=180></A><BR> <I>Крутая парковка
+            <TH><A href="parking[l] .mpg" ximg src="https://i.gifer.com/embedded/download/KK2c.gif" width=180></A><BR> <I>Крутая парковка
 
-            <TH><A href="horseriding[l] .mpg" ximg src="clip2.gif" width=180> </A> <BR>
+            <TH><A href="horseriding[l] .mpg" ximg src="https://i.gifer.com/embedded/download/KK2c.gif" width=180> </A> <BR>
 
                 <I>Лихой всадник
         <TR>
 
-            <TH><A href="kick[l] .mpg"><img src="clip3 .gif" width=180x/A><BR> <I>0х, уж эти женщины
+            <TH><A href="kick[l] .mpg"><img src="https://i.gifer.com/embedded/download/KK2c.gif" width=180x/A><BR> <I>0х, уж эти женщины
 
-            <TH><A href="headbrake[l] .avi"><img src="clip4 .gif" width=180x/A>
+            <TH><A href="headbrake[l] .avi"><img src="https://i.gifer.com/embedded/download/KK2c.gif" width=180x/A>
 
                 <BR><I>Жeлeзнaя голова</I></A>
     </TABLE>
@@ -56,5 +56,7 @@
     <PARAM name="blink" value="yes">
     Java-апплет, рисующий интерактивный огонь
 </APPLET>
+
+
 </BODY>
 </HTML>  
