--- a/Егорушкин квадратное уравнение.html
+++ b/Егорушкин квадратное уравнение.html
@@ -26,10 +26,10 @@
             c = document.getElementById("c").value,/*Ввод переменной*/
             arr = kvur(a, b, c),/*корней квадратного уравнения*/
             d = arr[0];/*дискриминант*/
-
+console.log(a);
         console.log("a: " + a);/*вывод в консоль */
-        console.log("a: " + b);/*вывод в консоль */
-        console.log("a: " + c);/*вывод в консоль */
+        console.log("b: " + b);/*вывод в консоль */
+        console.log("c: " + c);/*вывод в консоль */
         document.getElementById("d").innerHTML = "Дискриминант: " + d; /*присвоение d  к <p id="d"></p> */
         console.log("Дискриминант: " + d);/*вывод в консоль */
         console.log(
