--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/321.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/321.html
@@ -207,20 +207,24 @@
 <p>
     <font face="Times New Roman, serif" size="14"><font size="14"><font size="4">Для
         этого понадобится:</font></font></font></p>
-<table width="450" cellpadding="1" cellspacing="0">
+
+
+
+
+<table align="center" width="450" cellpadding="1" cellspacing="0">
     <tbody>
     <tr>
-        <td height="20" bgcolor="#92d050" colspan="10"></td>
+        <td height="20" bgcolor="#92d050" colspan="7"></td>
     </tr>
     <tr>
         <td bgcolor="#0070c0" colspan="3"></td>
+
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
+
+        <td bgcolor="#339933"></td>
     </tr>
     <tr>
         <td bgcolor="#0070c0"></td>
@@ -231,23 +235,26 @@
         <td bgcolor="#0070c0"></td>
         <td></td>
         <td></td>
+
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
+
+
+        <td bgcolor="#339933"></td>
     </tr>
     <tr>
+        <td bgcolor="#0070c0"></td>
         <td bgcolor="#0070c0" colspan="3"></td>
-        <td bgcolor="#0070c0" colspan="3"></td>
+
+        <td bgcolor="#0070c0" colspan="1"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
+
+        <td bgcolor="#339933"></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
+        <td bgcolor="#339933"></td>
+
         <td></td>
         <td bgcolor="#0070c0"></td>
         <td width="152">2. Передать нейросети очищенную выборку — базу лиц, однозначно отмеченных как женские или
@@ -256,26 +263,29 @@
         </td>
         <td bgcolor="#0070c0"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
+
+        <td bgcolor="#339933"></td>
+
     </tr>
     <tr>
-        <td></td>
-        <td></td>
+        <td bgcolor="#339933"></td>
+
         <td></td>
         <td bgcolor="#0070c0" colspan="3"></td>
         <td bgcolor="#0070c0"></td>
         <td bgcolor="#0070c0"></td>
-        <td bgcolor="#0070c0"></td>
+
+
     </tr>
     <tr>
+        <td bgcolor="#339933"></td>
+
+        <td></td>
+
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
         <td bgcolor="#0070c0"></td>
         <td width="152">3. Протестировать нейросеть — передать ей новую очищенную выборку, но не сообщать, какие лица мужские, а
             какие женские. Это поможет понять, как часто нейросеть ошибается, и приемлем ли для вас такой уровень
@@ -286,20 +296,23 @@
         <td></td>
     </tr>
     <tr>
+        <td bgcolor="#339933"></td>
         <td></td>
         <td></td>
+
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td bgcolor="#0070c0" colspan="3"></td>
+        <td bgcolor="#0070c0" colspan="2"></td>
+
         <td></td>
     </tr>
     <tr>
-        <td height="20" bgcolor="#92d050" colspan="10"></td>
+        <td height="20" bgcolor="#92d050" colspan="7"></td>
     </tr>
     </tbody>
 </table>
+
+
 <p align="center">
     <font face="Times New Roman, serif"><font size="14"><font size="4">После
         обучения и тестов можно использовать
