--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/321.html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/321.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 
-    <title></title>
+    <title>Технологии
+        big data: как анализируют большие данные,
+        чтобы получить максимум прибыли</title>
 
 </head>
 <body lang="ru-RU" link="#0000ff" dir="ltr">
@@ -152,9 +154,9 @@
         дальнейшим манипуляциям: анализу и так
         далее. </font></font></font>
 </p>
-<p>
+<p align="center">
     <font color="#7030a0">
-        <img src="ab.png" name="Рисунок 3" align="bottom" hspace="8" vspace="8" width="515" height="307" border="8"/>
+        <img  src="ab.png" name="Рисунок 3" align="bottom" hspace="8" vspace="8" width="515" height="307" border="8"/>
     </font>
 </p>
 <h2 class="western" align="center"><font color="#c00000"><font face="Candara, serif"><font size="5">МАШИННОЕ
@@ -207,8 +209,6 @@
 <p>
     <font face="Times New Roman, serif" size="14"><font size="14"><font size="4">Для
         этого понадобится:</font></font></font></p>
-
-
 
 
 <table align="center" width="450" cellpadding="1" cellspacing="0">
@@ -274,7 +274,7 @@
         <td></td>
         <td bgcolor="#0070c0" colspan="3"></td>
         <td bgcolor="#0070c0"></td>
-        <td bgcolor="#0070c0"></td>
+        <td bgcolor="#339933"></td>
 
 
     </tr>
@@ -321,7 +321,7 @@
     <br/>
 
 </p>
-<p><img src="ab1.png" name="Рисунок 4" align="bottom" hspace="1" vspace="1" width="624" height="279" border="0"/>
+<p align="center"><img src="ab1.png" name="Рисунок 4" align="bottom" hspace="1" vspace="1" width="624" height="279" border="0"/>
 </p>
 <p>
     <font face="Times New Roman, serif"><font size="14"><b><font size="4">Зачем
@@ -629,7 +629,7 @@
         предсказать спрос по выявлению ассоциаций
         в данных и так далее. </font></font></font>
 </p>
-<p><img src="ab2.gif" name="Рисунок 5" align="bottom" width="624" height="306" border="0"/>
+<p align="center"><img src="ab2.gif" name="Рисунок 5" align="bottom" width="624" height="306" border="0"/>
 </p>
 <p><br/>
     <br/>
@@ -674,7 +674,7 @@
         нужно оценить результаты обработки или
         продемонстрировать их менеджеру или
         руководителю.</font></font></p>
-<p><img src="ab3.png" name="Рисунок 6" align="bottom" hspace="1" vspace="1" width="624" height="366" border="0"/>
+<p align="center"><img src="ab3.png" name="Рисунок 6" align="bottom" hspace="1" vspace="1" width="624" height="366" border="0"/>
 </p>
 <p><br/>
     <br/>
