--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.3/примеры/2 Демонстрация использования CSSсвойства Zindex .html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.3/примеры/2 Демонстрация использования CSSсвойства Zindex .html
@@ -1,2 +1,40 @@
 <!DOCTYPE HTML PUBLIC  "-//W3C//DTD HTML 4.0//EN">
-<html><head><title>Демонстрация использования CSS-свойства Z-index </title><style type ="text/css"> p ( margin:20; padding:20;border:solid gray; position:absolute; top:120;left:200}img.first {position: absolute; top:60;left:100;Z-index:200}img.second {position: absolute; top:60;left:100;Z-index:2}body {background-color:lightgrey; Z-index:1000}</style><body>.. задание элеметов тела............................ html-документа.. задание элеметов тела............................ html-документа<img id="fist" src= >.. задание элеметов телаhtml-документа<p>...текст абзаца </p>.. задание элеметов тела............................ html-документа<img id="second" src= >.. задание элеметов тела............................ html-документа.. задание элеметов телаhtml-документа</body> </html>
+<html>
+<head><title>Демонстрация использования CSS-свойства Z-index </title>
+    <style type="text/css"> p {
+        margin: 20;
+        padding: 20;
+        border: solid gray;
+        position: absolute;
+        top: 120;
+        left: 200
+    }
+
+    img.first {
+        position: absolute;
+        top: 60;
+        left: 100;
+        Z-index: 200
+    }
+
+    img.second {
+        position: absolute;
+        top: 60;
+        left: 100;
+        Z-index: 2
+    }
+
+    body {
+        background-color: lightgrey;
+        Z-index: 1000
+    }</style>
+<body>.. задание элеметов тела............................ html-документа.. задание элеметов
+тела............................ html-документа<img id="fist"
+                                                    src="https://avatars.mds.yandex.net/get-zen_doc/2404797/pub_5eca90a430f3950eeeba4e7c_5eca921030f3950eeeba4ea1/scale_1200"
+                                                    width="100">.. задание элеметов телаhtml-документа<p>...текст
+    абзаца </p>.. задание элеметов тела............................ html-документа<img id="second"
+                                                                                       src="https://avatars.mds.yandex.net/get-zen_doc/2404797/pub_5eca90a430f3950eeeba4e7c_5eca921030f3950eeeba4ea1/scale_1200"
+                                                                                       width="100">.. задание
+элеметов тела............................ html-документа.. задание элеметов телаhtml-документа
+</body>
+</html>
