--- a/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.4/примеры/3 Демонстрация использования CSSсвойства неупорядоченных списков liststyleposition .html
+++ b/conspect/КПР-47Д  Web-технологии (МДК.05.02 ) Горницкая Ирина Иосифовна/3.4/примеры/3 Демонстрация использования CSSсвойства неупорядоченных списков liststyleposition .html
@@ -27,7 +27,7 @@
     <TR>
       <TD>
         <UL style="list-style-position:inside ">
-          <H5 align=center>Haибoлee выдающиеся алгоритмы XX века</Н5>
+          <h5 align=center>Haибoлee выдающиеся алгоритмы XX века</h5>
             7
             <LI>Так называемый алгоритм Монте-Карло. Используется для моделирования случайных процессов и решения
               задач, которые можно решить только приближенно.
@@ -36,7 +36,7 @@
               на периодические компоненты.
       <TD>
         <UL style="list-style-position:outside ">
-          <H5 align=center>Haибoлee выдающиеся алгоритмы XX века</thН5>
+          <h5 align=center>Haибoлee выдающиеся алгоритмы XX века</h5>
             <LI>Так называемый алгоритм Монте-Карло. Используется для моделирования случайных процессов и решения
               задач, которые можно решить только приближенно.
             <LI>Симплекс-метод. Этот метод вообще является основой линейного программирования .
